# redis-infer

./: .gitignore  Cargo.toml  HANDOVER.md  Makefile  README.md
crates/infer-engine/: Cargo.toml
crates/infer-engine/src/: error.rs  lib.rs  tokens.rs
crates/infer-engine/src/llama/: generate.rs  model.rs
crates/redis-infer/: Cargo.toml
crates/redis-infer/src/: lib.rs  state.rs  tokens.rs  worker.rs
crates/redis-infer/src/commands/: generate.rs  generate_text.rs  info.rs  load.rs  mod.rs
docs/: ARCHITECTURE-OPTIONS-redis-infer.md  DECISIONS-redis-infer.md  PVVH-redis-infer.md  REDIS-INFER-DETAILED-PLAN-v3.1.md  RESEARCH-redis-infer.md  RISK-SCAN-redis-infer.md  grok-conversation-2026-02-26.md
scripts/: ab-test.py  bench-mlx-vs-llama.py  embed-and-store.py  prove-e2e.py  prove-pretokenized.py  test-concurrent.py  test-inference.py  test-tinyllama.py  tokenize-and-store.py
src/: redis-infer.c
