[package]
name = "infer-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["llama-cpp"]
llama-cpp = ["dep:llama-cpp-2"]
system-ggml = ["llama-cpp-sys-2/system-ggml"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
bytemuck.workspace = true
encoding_rs = "0.8"
llama-cpp-2 = { version = "0.1.136", optional = true }
llama-cpp-sys-2 = { version = "0.1.136", optional = true }
