[package]
name = "redis-infer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
name = "redis_infer"

[dependencies]
redis-module = "2.0.7"
infer-engine = { path = "../infer-engine" }
llama-cpp-2 = "0.1.136"
thiserror.workspace = true
anyhow.workspace = true
num_cpus.workspace = true
bytemuck.workspace = true
tracing.workspace = true
