[package]
name = "redis-infer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
name = "redis_infer"

[features]
default = []
system-ggml = ["infer-engine/system-ggml", "llama-cpp-sys-2/system-ggml"]

[dependencies]
redis-module = "2.0.7"
infer-engine = { path = "../infer-engine" }
llama-cpp-2 = "0.1.136"
llama-cpp-sys-2 = { version = "0.1.136", optional = true }
thiserror.workspace = true
anyhow.workspace = true
num_cpus.workspace = true
bytemuck.workspace = true
tracing.workspace = true
